@@ -20,7 +20,15 @@
 ?>
 <?php
 class CTextArea extends CTag{
-/* public */
+
+	/**
+	 * The "&" symbol in the textarea should be encoded.
+	 *
+	 * @var int
+	 */
+	protected $encStrategy = self::ENC_ALL;
+
+
 	public function __construct($name='textarea',$value='',$cols=77,$rows=7,$readonly='no'){
 		parent::__construct('textarea','yes');
 		$this->attributes['class'] = 'biginput';
