@@ -1,5 +1,6 @@
 Changes for 1.8.12rc1
 
+..F....... [ZBX-4761] fixed "&" encoding in input fields (Pavels)
 ..F....... [ZBX-4697] fixed error when massupdate group for hosts that belongs to different groups (Vedmak)
 .D........ [ZBX-4777] added information in the Zabbix sender manpage about values being sent in a sequential manner and the need to have ordered timestamps (Richlv)
 
